release 1.1.5 (2010)
- Fixed issue 429
  https://jersey.dev.java.net/issues/show_bug.cgi?id=429
  Package scanning deployment on JBoss 5.x app servers now works correctly.
- Fixed issue 32
  https://jersey.dev.java.net/issues/show_bug.cgi?id=32
  The servlet container supports portable scannnig of WEB-INF/lib and
  WEB-INF/classes directories when the default servlet configuration is
  utilized.
  Default configuration deployments will now work on WebLogic-based
  application servers.
- Fixed issue 421
  https://jersey.dev.java.net/issues/show_bug.cgi?id=421
  ContainerResponse.write() now consistently sets the isCommitted state.
- Fixed issue 420
  https://jersey.dev.java.net/issues/show_bug.cgi?id=420
  Some servlet containers do not support the addition of headers after
  a HttpServletResponse.sendError is invoked.
  Jersey will invoke sendError for a response status code >=400 when there
  is no response entity. The headers are now written before sendError is
  invoked.
- Fixed issue 419
  https://jersey.dev.java.net/issues/show_bug.cgi?id=419
  Upgraded simple server to version 4.1.14.
- Fixed issue 422
  https://jersey.dev.java.net/issues/show_bug.cgi?id=422
  The container response filter of the server-side LoggingFilter now ensures
  that when the ServletContainer is utilized response headers are written when
  there is no response entity present.
  This was a regression as the ContainerResponseAdapter of the LoggingFilter
  was not correctly adapting the finish method.
- Fixed issue 423
  https://jersey.dev.java.net/issues/show_bug.cgi?id=423
  Injection on to 299 managed beans in the dependent scope (scope is managed
  by Jersey) is correctly supported for Jersey-based injection artifacts
  such as @Context ResourceContext and @Inject T.
- Fixed issue 125
  https://jersey.dev.java.net/issues/show_bug.cgi?id=125
  @FormParam injection is supported for the same targets as other @*Param
  annotations. Injection will only occur if there is a request entity