@@ -34,36 +34,29 @@
  * only if the new code is made subject to such option by the copyright
  * holder.
  */
-
 package com.sun.jersey.samples.jcdibeans.resources;
 
 import com.sun.jersey.api.core.ResourceContext;
-import com.sun.jersey.spi.resource.Singleton;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-import javax.annotation.ManagedBean;
-import javax.annotation.Resource;
 import javax.annotation.PostConstruct;
-import javax.annotation.PreDestroy;
-import javax.ws.rs.GET;
-import javax.ws.rs.Produces;
-import javax.ws.rs.Path;
+import javax.enterprise.context.ApplicationScoped;
 import javax.ws.rs.core.Context;
+import javax.ws.rs.core.Response;
 import javax.ws.rs.core.UriInfo;
+import javax.ws.rs.ext.ExceptionMapper;
+import javax.ws.rs.ext.Provider;
 
 /**
  *
- * @author Paul.Sandoz@Sun.Com
+ * @author paulsandoz
  */
-@Path("/jcdibean/dependent/singleton")
-@Singleton
-@ManagedBean
-public class JCDIBeanDependentSingletonResource {
-
-    private @Resource(name="injectedResource") int injectedResource = 0;
+@Provider
+@ApplicationScoped
+public class JCDIBeanExceptionMapper implements ExceptionMapper<JDCIBeanException> {
 
     private @Context UriInfo uiFieldInject;
-    
+
     private @Context ResourceContext rc;
 
     private UriInfo uiMethodInject;
@@ -72,36 +65,21 @@ public class JCDIBeanDependentSingletonResource {
     public void set(UriInfo ui) {
         this.uiMethodInject = ui;
     }
-    
+
     @PostConstruct
     public void postConstruct() {
-        Logger.getLogger(JCDIBeanDependentSingletonResource.class.getName()).log(Level.INFO,
+        Logger.getLogger(JCDIBeanExceptionMapper.class.getName()).log(Level.INFO,
                 "In post construct " + this);
 
         if (uiFieldInject == null || uiMethodInject == null || rc == null)
             throw new IllegalStateException();
     }
-
-    @GET 
-    @Produces("text/plain")
-    public String getMessage() {
-        Logger.getLogger(JCDIBeanDependentSingletonResource.class.getName()).log(Level.INFO,
-                "In getMessage " + this +
-                "; uiFieldInject: " + uiFieldInject + "; uiMethodInject: " + uiMethodInject);
-
+    
+    public Response toResponse(JDCIBeanException exception) {
         if (uiFieldInject == null || uiMethodInject == null || rc == null)
             throw new IllegalStateException();
         
-        return Integer.toString(injectedResource++);
+        return Response.serverError().entity("JDCIBeanException").build();
     }
 
-    @Path("exception")
-    public String getException() {
-        throw new JDCIBeanDependentException();
-    }
-
-    @PreDestroy
-    public void preDestroy() {
-        Logger.getLogger(JCDIBeanDependentSingletonResource.class.getName()).log(Level.INFO, "In pre destroy " + this);
-    }
 }
